Add updated last worklog source

--- a/subprojects/bitacoras/semana_13.tex
+++ b/subprojects/bitacoras/semana_13.tex
@@ -48,13 +48,11 @@
       %sat
       20/5/23 & 4 h & & Trabajando Solución \\
       %sun
-      21/5/23 & 4 h & & Descripción \\
+      21/5/23 & 4 h & & Trabajando Solución \\
       %mon
-      22/5/23 & 2 h & & Descripción \\
+      22/5/23 & 2 h & & Trabajando Solución \\
       %tues
-      23/5/23 & 2 h & & Descripción \\
-      %wed
-      24/5/23 & 0 h & & Descripción \\
+      23/5/23 & 2 h & & Trabajando Solución \\
       \hline
       \textbf{Total} & 21 h \\
       \hline
@@ -116,8 +114,8 @@
     \item Testing videofilesource with and without loss (
       useful tool for loading video file into frames)
     \item Writing 3.1 ... Need binary mask for diagram
-    \item Copy Greivin's code to get CPP ground truth
-    \item Encapsulate in function
+    \item Getting mask
+    \item Encapsulating in function
   \end{enumerate}
 
   Todo:
@@ -138,6 +136,10 @@
 
   \subsection*{Sunday:}
 
+  \subsection*{Monday:}
+
+
+  \subsection*{Tuesday:}
 
 \subsection*{Appendix A}
 
